<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#D4D9F7"
    tools:context=".AboutUs">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@drawable/ic_back_arrow"
        style="@style/ThemeOverlay.AppCompat.ActionBar"
        app:title="@string/app_name"
        app:titleTextColor="@android:color/black"/>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="top|center">
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardElevation="5dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="20dp"
        app:cardUseCompatPadding="true">
        <com.denzcoskun.imageslider.ImageSlider
            android:id="@+id/imageSlider"
            android:layout_width="350dp"
            android:layout_height="450dp"

            app:iss_auto_cycle="true"
            app:iss_placeholder="@android:color/darker_gray"
            app:iss_error_image="@android:color/darker_gray"
            app:iss_period="1500"
            app:iss_delay="2"
            app:iss_unselected_dot="@drawable/default_unselected_dot"
            app:iss_selected_dot="@drawable/default_selected_dot"/>

    </androidx.cardview.widget.CardView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textColor="#000"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:textIsSelectable="true"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:textColor="#000"/>


    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rowCount="1"
        android:layout_marginTop="35dp"
        android:columnCount="3"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/whatsapp"
            android:clickable="true"
            android:orientation="vertical"
            android:layout_marginRight="30dp"
            android:gravity="center">
            <ImageView
                android:layout_width="37dp"
                android:layout_height="37dp"
                android:src="@drawable/whatsapp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/whatsapp"
                android:layout_marginTop="3dp"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="#000"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/instagram"
            android:clickable="true"
            android:orientation="vertical"
            android:layout_marginRight="30dp"
            android:gravity="center">
            <ImageView
                android:layout_width="37dp"
                android:layout_height="37dp"
                android:src="@drawable/instagram"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instagram"

                android:layout_marginTop="3dp"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="#000"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/telegram"
            android:clickable="true"
            android:gravity="center">
            <ImageView
                android:layout_width="37dp"
                android:layout_height="37dp"
                android:src="@drawable/telegram"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telegram"
                android:textSize="12sp"
                android:layout_marginTop="3dp"
                android:textStyle="bold"
                android:textColor="#000"/>

        </LinearLayout>
    </GridLayout>
    </LinearLayout>
</ScrollView>


</LinearLayout>