<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile"
    android:background="@drawable/layout_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_back"
            style="@style/ThemeOverlay.AppCompat.ActionBar"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:orientation="vertical"
                    android:background="@drawable/layout_background2"
                    >
                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="150dp"
                        android:layout_gravity="center"
                        android:foreground="?selectableItemBackground"
                        android:layout_marginTop="20dp"
                        app:cardElevation="5dp">
                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/facImage"
                            android:layout_width="140dp"
                            android:layout_height="140dp"
                            android:src="@drawable/img_1"/>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    app:cardCornerRadius="15dp"
                    app:contentPadding="26dp"
                    app:cardUseCompatPadding="true"
                    android:layout_marginTop="-70dp"
                    app:cardElevation="5dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center_horizontal">

                        <EditText
                            android:id="@+id/facName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="0dp"
                            android:text="@string/facName"
                            android:textColor="#000"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:enabled="false"
                            android:theme="@style/CustomEditText"
                            app:fontFamily="sans-serif-condensed" />

                        <EditText
                            android:id="@+id/facDesignation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/facDesignation"
                            android:textColor="#000"
                            android:textSize="22sp"
                            android:textStyle="bold"
                            android:enabled="false"
                            android:theme="@style/CustomEditText"
                            app:fontFamily="sans-serif-condensed-light" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="16dp">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginEnd="48dp">
                        <EditText
                            android:id="@+id/cabinNo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="18dp"
                            android:text="@string/cabin1"
                            android:textColor="#000"
                            android:layout_marginEnd="5dp"
                            android:textSize="22sp"
                            android:textStyle="bold"
                            android:enabled="false"
                            android:theme="@style/CustomEditText"
                            app:fontFamily="sans-serif-condensed" />

                        <EditText
                            android:id="@+id/email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:text="@string/email1"
                            android:textColor="#000"
                            android:layout_marginEnd="5dp"
                            android:textSize="22sp"
                            android:textStyle="bold"
                            android:enabled="false"
                            android:theme="@style/CustomEditText"
                            app:fontFamily="sans-serif-condensed" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="5dp">
                        <EditText
                            android:id="@+id/cabinNoValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cabinNo"
                            android:textColor="#000"
                            android:textSize="20sp"
                            android:layout_marginBottom="18dp"
                            android:enabled="false"
                            android:theme="@style/CustomEditText"
                            android:textStyle="bold"
                            app:fontFamily="sans-serif-condensed-light" />
                        <EditText
                            android:id="@+id/emailValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/emailValue"
                            android:textColor="#000"
                            android:textSize="20sp"
                            android:enabled="false"
                            android:theme="@style/CustomEditText"
                            android:textStyle="bold"
                            app:fontFamily="sans-serif-condensed-light" />


                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="16dp">
                    <EditText
                        android:id="@+id/department"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="18dp"
                        android:text="@string/department1"
                        android:textColor="#000"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:enabled="false"
                        android:theme="@style/CustomEditText"
                        android:layout_marginEnd="10dp"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        app:fontFamily="sans-serif-condensed" />
                    <EditText
                        android:id="@+id/departmentValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/departmentValue"
                        android:textColor="#000"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:enabled="false"
                        android:theme="@style/CustomEditText"
                        android:layout_marginTop="5dp"
                        app:fontFamily="sans-serif-condensed-light" />

                </LinearLayout>

                <Button
                    android:id="@+id/saveBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:textSize="24sp"
                    android:textColor="#000"
                    android:textStyle="bold"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginTop="16dp"/>


            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>